--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
-    "echarts": "^5.1.2",
+    "echarts": "^4.1.0",
+    "echarts-wordcloud": "^1.1.3",
     "electron-updater": "^4.3.9",
     "element-ui": "^2.15.2",
     "express": "^4.17.1",
@@ -84,6 +85,7 @@
     "@types/fs-extra": "^9.0.11",
     "@types/node": "^14.14.41",
     "autoprefixer": "^10.2.6",
+    "babel-preset-env": "^1.7.0",
     "cache-loader": "^4.1.0",
     "cfonts": "^2.9.3",
     "chalk": "^4.1.1",
